update tutorial step 3 src